fixed the input for everything, now i need to figure how to some one cna click in wich answer is correct in a smart way, then how to add more quesiton, collapse get it all into one questuion object etc

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,4 +1,5 @@
 .headerContainer {
   background-color: black;
   color: white;
+  height: 10rem;
 }
